toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__t-6.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(\"123😎\")"
---
Int 0..3 
Unrecognized 3..7
