toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__valid_binary_numbers-2.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(\"0b1010_1010\")"
---
Int 0..11
