toolchain/sea_parse/src/snapshots/sea_parse__tokenize__tests__valid_binary_numbers-4.snap
---
source: toolchain/sea_parse/src/tokenize.rs
expression: "pprint_tokenize(\"0b_0\")"
---
Int 0..4
